--- a/assets/techauraz-utilities.css
+++ b/assets/techauraz-utilities.css
@@ -252,13 +252,27 @@
 }
 
 @media screen and (max-width: 749px) {
-  .tech-hide-mobile {
+  .tech-hide-mobile,
+  .small-hide {
     display: none !important;
   }
 }
 
 @media screen and (min-width: 750px) {
-  .tech-hide-desktop {
+  .tech-hide-desktop,
+  .medium-up-hide {
+    display: none !important;
+  }
+}
+
+@media screen and (min-width: 750px) and (max-width: 989px) {
+  .medium-hide {
+    display: none !important;
+  }
+}
+
+@media screen and (min-width: 990px) {
+  .large-up-hide {
     display: none !important;
   }
 }
